# ai-chatbot-cs-demo

./: README.md  prompt.md  pyproject.toml
src/ai_chatbot_cs_demo/: main.py
src/ai_chatbot_cs_demo/agent/: controller.py  model.py  providers.py
