[project]
name = "ai-chatbot-cs-demo"
version = "0.1.0"
description = "Thoughtful AI customer support agent"
readme = "README.md"
authors = [
    { name = "John Raines", email = "johndanielraines@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "numpy>=2.4.2",
    "python-dotenv>=1.0",
    "scikit-learn>=1.8.0",
]

[project.scripts]
chat = "ai_chatbot_cs_demo.main:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
